--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -73,6 +73,10 @@ li {
 	height: 100%;
 	padding-left: 5%;
 }
+.nav-button {
+	width: 8em;
+	padding-right: 1em;
+}
 
 /* IDs */
 #left-collumn {
@@ -87,7 +91,7 @@ li {
 #logo {
 	width: 100%;
 }
-#name-container {
+#name-container {	
 	padding-top: 30%;
 }
 #name-cell {
@@ -100,5 +104,10 @@ li {
 }
 #title-table {
 	width: 100%;
-	background-color: #777777
+	background-color: #777777;
+}
+#transition {
+	height: 4em;
+	width: 100%;
+	background: linear-gradient(#777777, #EEEEEE);
 }
