--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ body {
 }
 #nav-bar {
 	background-image: url(images/navbar.png);
-	background-size: contain;
+	background-size: auto 100%;
 	background-repeat: no-repeat;
 	height: 10%;
 }
@@ -103,6 +103,7 @@ body {
 	}
 	.nav-button {
 		font-size: 12pt;
+		padding-left: 15px;
 	}
 }
 #profile-pic {
