--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,6 +77,7 @@ body {
 }
 #about-anchor {
 	padding-top: 30px;
+	margin-bottom: 100px;
 }
 #about-table {
 	width: 100%;
@@ -109,6 +110,7 @@ body {
 #profile-pic {
 	display: block;
 	margin: auto;
+	width: 50%;
 }
 .header {
 	font-size: 35pt;
